--- a/WebSpectre.Client/_Imports.razor
+++ b/WebSpectre.Client/_Imports.razor
@@ -8,3 +8,5 @@
 @using Microsoft.JSInterop
 @using WebSpectre.Client
 @using WebSpectre.Client.Layout
+@using WebSpectre.Shared
+@using WebSpectre.Shared.Agents
