--- a/WebSpectre.Client/Monitor/HostInfoModal.razor
+++ b/WebSpectre.Client/Monitor/HostInfoModal.razor
@@ -1,17 +1,15 @@
-﻿
-
-<div class="modal fade" tabindex="-1" role="dialog" id="hostInfoModal">
+﻿<div class="modal fade" tabindex="-1" role="dialog" id="hostInfoModal">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title">Информация о </h5>
+                <h5 class="modal-title">Информация о @Host.MachineName</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
             <div class="modal-body">
                 <p>@Host.OSVersion</p>
-                <p></p>
+                <p>@Host.IsCaptureProcessing</p>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Закрыть</button>
