--- a/WebSpectre.Client/_Imports.razor
+++ b/WebSpectre.Client/_Imports.razor
@@ -5,8 +5,11 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
+@using Microsoft.AspNetCore.SignalR.Client
 @using Microsoft.JSInterop
 @using WebSpectre.Client
 @using WebSpectre.Client.Layout
 @using WebSpectre.Shared
 @using WebSpectre.Shared.Agents
+@using WebSpectre.Shared.Perfomance
+@using PacketDotNet
