--- a/WebSpectre.Client/Layout/MainLayout.razor
+++ b/WebSpectre.Client/Layout/MainLayout.razor
@@ -1,23 +1,20 @@
 ﻿@inherits LayoutComponentBase
 
 <header class="ws-header">
-    <div class="ws-title">WebSpectre</div>
-    <div class="ws-objects">
-        <div class="ws-header-titles">
-            <a class="ws-header-title" href="#" target="blank">МОНИТОРИНГ</a>
-            <a class="ws-header-title" href="#" target="blank">АНАЛИЗ</a>
-        </div>
-        <div class="ws-header-authorize">
-            <span class="ws-username">Admin41</span>
-            <div class="ws-icon-wrapper">
-                <a class="ws-authorize"><img src="icons/user.png" alt="login" class="header-icon"></a>
-            </div>
-            <div class="ws-icon-wrapper">
-                <a class="ws-unauthorize"><img src="icons/logout.png" alt="logout" class="header-icon"></a>
-            </div>
-        </div>
+    <div class="ws-header-titles">
+        <div class="ws-title">WebSpectre</div>
+        <a class="ws-header-title" href="#" target="blank">МОНИТОРИНГ</a>
+        <a class="ws-header-title" href="#" target="blank">АНАЛИЗ</a>
     </div>
+    <div class="ws-header-authorize">
+        <span class="ws-username">Admin41</span>
+        <a class="ws-add-user">Добавить пользователя</a>
+        <a class="ws-authorize">Сменить пароль</a>                   
+        <a class="ws-unauthorize">Выход</a>                   
+    </div>            
 </header>
 <main class="ws-main">
     @Body
 </main>
+<footer class="ws-footer">
+</footer>
