--- a/WebSpectre.Client/Pages/Monitor.razor
+++ b/WebSpectre.Client/Pages/Monitor.razor
@@ -1,164 +1,202 @@
-﻿@using WebSpectre.Client.Monitor;
-
-@inject HubConnection Hub
-@inject NavigationManager Navigation
-@inject HttpClient HttpClient
-
-@page "/"
+﻿@page "/"
 
 <PageTitle>Мониторинг</PageTitle>
 
-<main class="ws-main">
-    <div class="ws-agents">
-        @if (hosts != null)
-        {
-            foreach (var host in hosts)
-            {
-                <div class="ws-agent">
-                    <img src="icons/desktop.png" alt="agent" class="main-icon">
-                    <span class="ws-agent-hostname">@host.Key</span>
-                    <button class="ws-agent-button">Информация</button>
-                    <button class="ws-agent-button">Сетевые адаптеры</button>
-                </div>
-            }
-        }      
+<div class="ws-add-delete-agent">
+    <button class="ws-add">Добавить агента</button>
+</div>
+<div class="ws-agents">
+    <div class="ws-agent">
+        <div class="ws-agent-host">
+            <img src="icons/host.png" alt="agent" class="agent-icon">
+            <span class="ws-agent-hostname">HOST1</span>
+            <div class="state red"></div>
+        </div>
+        <div class="ws-agent-info">
+            <button class="ws-agent-button-disabled" disabled>Информация</button>
+            <button class="ws-agent-button-disabled" disabled>Сетевые адаптеры</button>
+            <button class="ws-agent-delete">Удалить агента</button>
+        </div>
+        <div class="ws-agent-state">
+            <button class="ws-agent-start-disabled">Запустить</button>
+        </div>
     </div>
+    <div class="ws-agent">
+        <div class="ws-agent-host">
+            <img src="icons/host.png" alt="agent" class="agent-icon">
+            <span class="ws-agent-hostname">HOST2</span>
+            <div class="state orange"></div>
+        </div>
+        <div class="ws-agent-info">
+            <button class="ws-agent-button">Информация</button>
+            <button class="ws-agent-button">Сетевые адаптеры</button>
+            <button class="ws-agent-delete">Удалить агента</button>
+        </div>
+        <div class="ws-agent-state">
+            <button class="ws-agent-start">Запустить</button>
+        </div>
+    </div>
+    <div class="ws-agent-activated">
+        <div class="ws-agent-interact">
+            <div class="ws-agent-host">
+                <img src="icons/host.png" alt="agent" class="agent-icon">
+                <span class="ws-agent-hostname">HOST3</span>
+                <div class="state green"></div>
+            </div>
+            <div class="ws-agent-info">
+                <button class="ws-agent-button">Информация</button>
+                <button class="ws-agent-button">Сетевые адаптеры</button>
+                <button class="ws-agent-delete">Удалить агента</button>
+            </div>
+            <div class="ws-agent-state">
+                <button class="ws-agent-stop">Остановить</button>
+            </div>
+        </div>
+        <div class="ws-agent-started">
+            <div class="ws-agent-network-state">
+                <div class="ws-network-data">
+                    <span class="network-title">Полученные пакеты</span>
+                    <span class="network-value">10</span>
+                </div>
+                <div class="ws-network-data">
+                    <span class="network-title">Потерянные пакеты</span>
+                    <span class="network-value">0</span>
+                </div>
+                <div class="ws-network-data">
+                    <span class="network-title">Потерянные пакеты на интерфейсе</span>
+                    <span class="network-value">0</span>
+                </div>
+                <div class="ws-network-data">
+                    <span class="network-title">Пропускная способность</span>
+                    <span class="network-value">10</span>
+                </div>
+                <div class="ws-network-data">
+                    <span class="network-title">Джиттер</span>
+                    <span class="network-value">0</span>
+                </div>
+                <div class="ws-network-data">
+                    <span class="network-title">Задержка сети</span>
+                    <span class="network-value">0</span>
+                </div>
+            </div>
+            <div class="ws-agent-network-msg">
+                <span class="network-message">Проблем в сети не обнаружено</span>
+            </div>
+            <div class="ws-packets-arrived">
+                <table class="ws-table">
+                    <thead>
+                        <tr>
+                            <th>Номер</th>
+                            <th>Источник</th>
+                            <th>Назначение</th>
+                            <th>Протокол</th>
+                            <th>Информация</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr class="tcp-raw">
+                            <td>1</td>
+                            <td>192.168.0.1</td>
+                            <td>192.168.0.2</td>
+                            <td>TCP</td>
+                            <td>Какая-то информация 123123123123123123123123123123123123123</td>
+                        </tr>
+                        <tr class="udp-raw">
+                            <td>2</td>
+                            <td>192.168.0.2</td>
+                            <td>192.168.0.1</td>
+                            <td>UDP</td>
+                            <td>Какая-то информация</td>
+                        </tr>
+                        <tr class="ip-raw">
+                            <td>3</td>
+                            <td>192.168.0.1</td>
+                            <td>192.168.0.3</td>
+                            <td>IP</td>
+                            <td>Какая-то информация</td>
+                        </tr>
+                        <tr class="tcp-raw">
+                            <td>4</td>
+                            <td>192.168.0.1</td>
+                            <td>192.168.0.2</td>
+                            <td>TCP</td>
+                            <td>Какая-то информация</td>
+                        </tr>
+                        <tr class="tcp-raw">
+                            <td>5</td>
+                            <td>192.168.0.1</td>
+                            <td>192.168.0.2</td>
+                            <td>TCP</td>
+                            <td>Какая-то информация</td>
+                        </tr>
+                        <tr class="udp-raw">
+                            <td>6</td>
+                            <td>192.168.0.2</td>
+                            <td>192.168.0.1</td>
+                            <td>UDP</td>
+                            <td>Какая-то информация</td>
+                        </tr>
+                        <tr class="udp-raw">
+                            <td>7</td>
+                            <td>192.168.0.2</td>
+                            <td>192.168.0.1</td>
+                            <td>UDP</td>
+                            <td>Какая-то информация</td>
+                        </tr>
+                        <tr class="ip-raw">
+                            <td>8</td>
+                            <td>192.168.0.1</td>
+                            <td>192.168.0.3</td>
+                            <td>IP</td>
+                            <td>Какая-то информация</td>
+                        </tr>
+                        <tr class="ip-raw">
+                            <td>9</td>
+                            <td>192.168.0.1</td>
+                            <td>192.168.0.3</td>
+                            <td>IP</td>
+                            <td>Какая-то информация</td>
+                        </tr>
+                        <tr class="tcp-raw">
+                            <td>10</td>
+                            <td>192.168.0.1</td>
+                            <td>192.168.0.2</td>
+                            <td>TCP</td>
+                            <td>Какая-то информация</td>
+                        </tr>
+                        <tr class="ip-raw">
+                            <td>11</td>
+                            <td>192.168.0.1</td>
+                            <td>192.168.0.3</td>
+                            <td>IP</td>
+                            <td>Какая-то информация</td>
+                        </tr>
+                        <tr class="ip-raw">
+                            <td>12</td>
+                            <td>192.168.0.1</td>
+                            <td>192.168.0.3</td>
+                            <td>IP</td>
+                            <td>Какая-то информация</td>
+                        </tr>
+                        <tr class="tcp-raw">
+                            <td>13</td>
+                            <td>192.168.0.1</td>
+                            <td>192.168.0.2</td>
+                            <td>TCP</td>
+                            <td>Какая-то информация</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
 
-    @if (error != null)
-    {
-        <div>@error</div>
-    }
-</main>
+    </div>
+</div>
 
 @code {
-    private string error;
-
-    private List<string> agents = new List<string>();
-    private Dictionary<string, HostInfo> hosts = new Dictionary<string, HostInfo>();
-
-    private HostInfoModal hostInfoModal = new HostInfoModal();
-    private AvailableDevicesModal availableDevicesModal = new AvailableDevicesModal();
-
-    private void ShowHostInfoModal(HostInfo host)
-    {
-        hostInfoModal.Show(host); 
-    }
-
-    private void ShowNetworkAdapters(List<PcapDevice> devices)
-    {
-        availableDevicesModal.Show(devices);
-    }
-
+    
     protected override async Task OnInitializedAsync()
     {
-        ReceiveAll();
-
-        await Hub.StartAsync();
-
-        await GetAgents();       
-        await GetHosts();
-
-        StateHasChanged();
-    }
-
-    private async Task GetHosts()
-    {
-        if (agents != null)
-        {
-            foreach (var agent in agents)
-            {
-                HostInfo? hostInfo;
-
-                hostInfo = await HttpClient.GetFromJsonAsync<HostInfo>("https://localhost/info");      
-
-                if (hostInfo != null)
-                    hosts.Add(agent, hostInfo);               
-            }
-        }
-    }
-
-    private async Task GetAgents()
-    {
-        if (Hub is not null)
-        {
-            await Hub.SendAsync("GetAgents");
-        }
-    }
-
-    private async Task StartRequired(string agent)
-    {
-        if (Hub is not null)
-        {
-            await Hub.SendAsync("StartRequired", agent, null);
-        }
-    }
-
-    private async Task Start()
-    {
-        if (Hub is not null)
-        {
-            await Hub.SendAsync("Start");
-        }
-    }
-
-    private async Task StopRequired(string agent)
-    {
-        if (Hub is not null)
-        {
-            await Hub.SendAsync("StopRequired", agent);
-        }
-    }
-
-    private async Task Stop()
-    {
-        if (Hub is not null)
-        {
-            await Hub.SendAsync("Stop");
-        }
-    }
-
-    private void ReceiveAll()
-    {
-        Hub.On<string>("ReceiveError", (error) =>
-        {
-            this.error = error;
-            StateHasChanged();
-        });
-
-        Hub.On<List<string>>("ReceiveAgents", (agents) =>
-        {
-            this.agents = agents;
-            StateHasChanged();
-        });
-
-        Hub.On<string>("ReceiveMessage", (message) =>
-        {
-            StateHasChanged();
-        });
-
-        Hub.On<ulong>("ReceiveDelay", (delay) =>
-        {
-            StateHasChanged();
-        });
-
-        Hub.On<Jitter>("ReceiveJitter", (jitter) =>
-        {
-            StateHasChanged();
-        });
-
-        Hub.On<Packet>("ReceivePacket", (packet) =>
-        {
-            StateHasChanged();
-        });
-
-        Hub.On<List<Statistics>>("ReceiveStatistics", (statistics) =>
-        {
-            StateHasChanged();
-        });
-
-        Hub.On<Throughput>("ReceiveThroughput", (throughput) =>
-        {
-            StateHasChanged();
-        });
+        
     }
 }
