--- a/WebSpectre.Client/_Imports.razor
+++ b/WebSpectre.Client/_Imports.razor
@@ -9,6 +9,7 @@
 @using Microsoft.JSInterop
 @using WebSpectre.Client
 @using WebSpectre.Client.Layout
+@using WebSpectre.Client.Services
 @using WebSpectre.Shared
 @using WebSpectre.Shared.Agents
 @using WebSpectre.Shared.Perfomance
