--- a/WebSpectre.Client/_Imports.razor
+++ b/WebSpectre.Client/_Imports.razor
@@ -10,6 +10,7 @@
 @using WebSpectre.Client
 @using WebSpectre.Client.Layout
 @using WebSpectre.Client.Services
+@using WebSpectre.Client.Modals
 @using WebSpectre.Shared
 @using WebSpectre.Shared.Agents
 @using WebSpectre.Shared.Perfomance
