--- a/WebSpectre.Client/_Imports.razor
+++ b/WebSpectre.Client/_Imports.razor
@@ -14,4 +14,6 @@
 @using WebSpectre.Shared
 @using WebSpectre.Shared.Agents
 @using WebSpectre.Shared.Perfomance
+@using WebSpectre.Shared.Models
 @using PacketDotNet
+@using BlazorBootstrap
